--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,31 +17,31 @@
   }
 
   .hover-underline-animation {
-  display: inline-block;
-  position: relative;
-  color:black;
+    display: inline-block;
+    position: relative;
+    color:black;
+  }
+
+  nav.navbar-menu a:hover{
+    text-decoration: none!important;
   }
 
   .hover-underline-animation:after {
   content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color:black;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color:black;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
   }
 
   .hover-underline-animation:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+    transform: scaleX(1);
+    transform-origin: bottom left;
 
   }
-
-  // a {
-  //   text-decoration: none!important;
-  // }
 }
