contact and navbar stimulus controller ok

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -64,6 +64,22 @@ p {
   font-size: 1.2vw;
   text-decoration: none!important;
   text-transform: uppercase;
+  h1 {
+    font-size: 4em;
+    color: black;
+    text-transform: uppercase;
+  }
+
+  span {
+    border-right: .05em solid;
+    animation: caret 1s steps(1) infinite;
+  }
+
+  @keyframes caret {
+    50% {
+      border-color: transparent;
+    }
+  }
 }
 
 .block {
