--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-    <body class="has-navbar-fixed-top">
+    <body class="has-navbar-fixed-top" data-controller="search clipboard">
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
 
