--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,11 @@ body {
   // padding: 0px 2vw;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+}
+
 li {
   color: black!important;
   text-decoration: none!important;
@@ -95,13 +100,13 @@ p {
   justify-content: center;
   touch-action: pan-left, pan-right, pan-up, pan-down;
 
-  canvas {
-    width: 5vw !important;
-    height: 5vw !important;
-    // border-radius: 50%;
-    clip-path: circle(calc(50% - 1px));
-    // image-rendering: pixelated;
-  }
+  // canvas {
+  //   width: 5vw !important;
+  //   height: 5vw !important;
+  //   // border-radius: 50%;
+  //   clip-path: circle(calc(50% - 1px));
+  //   // image-rendering: pixelated;
+  // }
 }
 
 .Email {
@@ -139,8 +144,8 @@ footer {
 
   .Projects {
     background-color: $green;
-    margin: 0px 2%;;
     color: white;
+    margin: 6%!important;
 
     article {
       border-radius: 0%!important;
@@ -153,19 +158,11 @@ footer {
     }
   }
 
-  .Email {
-    color: white;
-    padding: 0;
-    border: none;
-    background: none;
-    line-height: .875;
-    text-transform: uppercase;
-    font-family: 'pp_neue_montrealbook'!important;
-    font-weight: bold!important;
-    font-style: normal!important;
-    font-size: 100%;
-    cursor:image-url("click-to-copy-4") 50 50, auto;
+  .Contact {
+    margin: 6%!important;
   }
 
-
+  .Email {
+    font-size: 150%;
+  }
 }
