--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,3 +62,26 @@
   transform: rotateY(180deg);
   a {color: white!important;}
 }
+
+@media (max-width: 768px) {
+
+  .text-work {
+    margin-top: 2%!important;
+  }
+
+  .flip-card {
+    width: 100%;
+    height: 150px;
+    margin-top:20px;
+  }
+
+  .flip-card-inner {
+    width: 100%;
+    height: 150px;
+  }
+
+  .flip-card-front, .flip-card-back {
+    width: 100%;
+    height: 150px;
+  }
+}
