--- a/app/assets/stylesheets/components/_vinyl.scss
+++ b/app/assets/stylesheets/components/_vinyl.scss
@@ -1,11 +1,15 @@
 .rotate {
-    animation: rotation 5s infinite linear;
+  animation: rotation 5s infinite linear;
+}
+.rotate:hover {
+  transform: scale(1.5);
   }
-  @keyframes rotation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
   }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
