margin about fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,7 +68,7 @@
   </div>
 </section>
 
-<section class="About section mx-5 my-6 is-medium columns", id="about">
+<section class="About section mx-5 mt-6 is-medium columns", id="about">
     <div class="column pl-3">
     <h2 class="medium-text mb-6 el is-size-4-mobile">ABOUT</h2>
       <p class="el is-size-6-mobile">
@@ -87,7 +87,7 @@
     </div>
 </section>
 
-<section class="typewriting section columns mx-5 mt-6">
+<section class="typewriting section columns mx-5">
   <div class="column pl-3 has-text-centered is-size-7-mobile">
   <%# <h2 class="medium-text mb-6 el is-size-3-mobile">CONTACT</h2> %>
     <h1>
