--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,7 +82,7 @@
     <div class="column has-text-right has-text-center-mobile el">
 
       <%= link_to "https://open.spotify.com/artist/1BhytEyR0LxnxXoeQPxGVV", target: "_blank" do %>
-        <%= image_tag ("vinyl.png"), class:"rotate zoom", width: 300, height: 300%>
+        <%= image_tag ("vinyl.jpg"), class:"rotate zoom", width: 300, height: 300%>
       <% end %>
     </div>
 </section>
