--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3 is-size-5-mobile">SONGSALAD.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•PERSONAL PROJECT• <br> SONGSALAD IS A MOBILE FIRST GAME APPLICATION DEVELOPED ON RAILS WHERE THE GOAL IS TO FIND THE LYRICS AND THE TITLE OF THE SONG IN ORDER TO WIN THE GAME SESSION. </p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br> Songsalad is a mobile first game application developed on rails where the goal is to find the lyrics and the title of the song in order to win the game session. </p>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="is-size-3 is-size-5-mobile">LESBONSCOMPAGNONS.FR</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">LES BONS COMPAGNONS ARE TRADERS OPERATING IN FOOD MARKETS. THIS IS A 360° PROJECT WITH LOGO & IDENTITY CREATION ALONGSIDE A WEB PLATFORM. </p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">Les Bons Compagnons are traders operating in food markets. This is a 360° project with logo & identity creation alongside a web platform. </p>
         </div>
       </div>
     </div>
@@ -59,8 +59,8 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="has-text-left is-size-3 is-size-5-mobile">ROCKY-ALHOA.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•PERSONAL PROJECT• <br>ROCKY ALOHA IS A MARKETPLACE INSPIRED BY AIRBNB.</p>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">FRONT-END AND BACK WORK</p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br>Rocky Aloha is a marketplace inspired by airbnb.</p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">Front-end and Back-end work</p>
         </div>
       </div>
     </div>
@@ -72,8 +72,8 @@
     <div class="column pl-3">
     <h2 class="medium-text mb-6 el is-size-4-mobile">ABOUT</h2>
       <p class="el is-size-6-mobile">
-        I'M A 29YO FRENCH DEVELOPER <br>GRADUATED FROM LE WAGON NANTES. <br>
-        I AM ALSO A PASSIONATE MUSIC COMPOSER.
+        I'm a 29yo french developer <br>graduated from Le Wagon Nantes. <br>
+        I am also a passionate music composer.
       </p>
       <br>
       <%# <p class="el">•CLICK THE VINYL TO TAKE A LISTEN•</p> %>
