uppercase and about section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,8 +32,10 @@
           <div class="songsalad-image"></div>
         </div>
         <div class="flip-card-back has-text-left">
-          <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3 is-size-5-mobile">SONGSALAD.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br> Songsalad is a mobile first game application developed on rails where the goal is to find the lyrics and the title of the song in order to win the game session. </p>
+          <a href="http://www.songsalad.com/" target="blank" class="has-text-left is-size-3 is-size-5-mobile">SONGSALAD.COM</a>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br> Songsalad is a mobile first game application developed on rails.
+            The goal is to find the lyrics and the title of the song in order to win the game. You can also play keep track of your stats and your friend's stats via a social mode.
+          </p>
         </div>
       </div>
     </div>
@@ -59,8 +61,8 @@
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="has-text-left is-size-3 is-size-5-mobile">ROCKY-ALHOA.COM</a>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br>Rocky Aloha is a marketplace inspired by airbnb.</p>
-          <p class="text-work mt-6 has-text-left is-size-6-mobile">Front-end and Back-end work</p>
+          <p class="text-work mt-6 has-text-left is-size-6-mobile">•Personal Project• <br>Rocky Aloha is a marketplace inspired by airbnb, designed and developed within a week.
+            Front-end and Back-end work.</p>
         </div>
       </div>
     </div>
@@ -72,8 +74,9 @@
     <div class="column pl-3">
     <h2 class="medium-text mb-6 el is-size-4-mobile">ABOUT</h2>
       <p class="el is-size-6-mobile">
-        I'm a 29yo french developer <br>graduated from Le Wagon Nantes. <br>
-        I am also a passionate music composer.
+        I'M A 29YO FRENCH DEVELOPER GRADUATED <br> FROM LE WAGON NANTES.
+        I'M CURRENTLY <br> WORKING AS A FREELANCE DEVELOPER <br> BUT I'M ALWAYS OPEN TO NEW PROJECTS. <br>
+        I'M ALSO A PASSIONATE MUSIC COMPOSER.
       </p>
       <br>
       <%# <p class="el">•CLICK THE VINYL TO TAKE A LISTEN•</p> %>
@@ -82,7 +85,7 @@
     <div class="column has-text-right has-text-center-mobile el">
 
       <%= link_to "https://open.spotify.com/artist/1BhytEyR0LxnxXoeQPxGVV", target: "_blank" do %>
-        <%= image_tag ("vinyl.jpg"), class:"rotate zoom", width: 300, height: 300%>
+        <%= image_tag ("vinyl.jpg"), class:"rotate", width: 300, height: 300%>
       <% end %>
     </div>
 </section>
@@ -109,6 +112,7 @@
     <a href="https://github.com/Ouskababoushka" class="column has-text-left-mobile " target="_blank">Github</a>
     <div class="column has-text-centered has-text-left-mobile">Made with 🖤 by<br>Valentin Chauveau 2022</div>
     <a href="https://www.linkedin.com/in/valentinchauveau/" class="column has-text-right has-text-left-mobile" target="_blank">Linkedin</a>
+
   </div>
 </footer>
 
