--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,7 +9,7 @@
 .songsalad-image{
   height: 100%;
   position:relative;
-  background:   url(image_path('songsalad-screen.jpg'))no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('songsalad-screen.jpg'))no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -17,7 +17,7 @@
 .lbc-image{
   height: 100%;
   position:relative;
-  background:   url(image_path('lbc-calicot-design.jpg'))no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('lbc-calicot-design.jpg'))no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -25,7 +25,7 @@
 .rockyaloha-image{
   height: 100%;
   position:relative;
-  background:   url(image_path('rocky-aloha-screen.jpg'))no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.1),rgba(67, 67, 67,0.1)), url(image_path('rocky-aloha-screen.jpg'))no-repeat;
   background-size: cover;
   background-position: center;
 }
