--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,10 @@
         Work
       </a>
 
+      <a href="<%= '#skills' %>" class="navbar-item hover-underline-animation">
+        Skills
+      </a>
+
       <a href="<%= '#about' %>" class="navbar-item hover-underline-animation">
         About
       </a>
